--- a/src/main/resources/templates/webPage.html
+++ b/src/main/resources/templates/webPage.html
@@ -16,10 +16,10 @@
 
     <nav id="nav">
         <ul>
-            <li><a href="index.html" class="active"><span class="icon fa-home"></span></a></li>
-            <li><a href="gallery.html"><span class="icon fa-camera-retro"></span></a></li>
+            <li><a th:href="@{/webpage}" class="active"><span class="icon fa-home"></span></a></li>
+            <li><a th:href="@{/images}"><span class="icon fa-camera-retro"></span></a></li>
             <li><a th:href="@{/uploadFile}"><span class="fas fa-upload"></span></a></li>
-            <li><a th:href="@{/uploadFile}"><span class="far fa-user"></span></a></li>
+            <li><a th:href="@{/login}"><span class="far fa-user"></span></a></li>
         </ul>
     </nav>
 
