--- a/src/main/resources/static/assets/css/upload.css
+++ b/src/main/resources/static/assets/css/upload.css
@@ -1,15 +1,15 @@
 body{
-    background: rgba(0,0,0,0.9);
+    background: #2a4959;
 }
 form{
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     margin-top: -100px;
     margin-left: -250px;
     width: 500px;
     height: 200px;
-    border: 4px dashed #fff;
+    border: 1px solid #fff;
 }
 form p{
     width: 100%;
@@ -49,5 +49,3 @@ form button:hover{
 form button:active{
     border:0;
 }
-
-
