--- a/src/main/resources/static/assets/css/coolUpload.css
+++ b/src/main/resources/static/assets/css/coolUpload.css
@@ -35,17 +35,18 @@
     }
 }
 body {
-    background: #1abc9c;
+    background: #2a4959;
 }
 * {
     box-sizing: border-box;
 }
+
 .wrapper {
     -webkit-animation: roll 1.5s;
     animation: roll 1.5s;
     position: fixed;
     left: 50%;
-    top: 50%;
+    top: 40%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     padding: 25px;
@@ -106,15 +107,33 @@ body {
     margin-top: 24px;
     padding: 8px;
 }
+.wrapper input[type=file] {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+
+}
 .show-button {
-    background: #264974;
+    position: fixed;
+    left: 47%;
+    top: 61%;
+    background: #2a4959;
+    opacity: 5;
     border: none;
     color: #fff;
     padding: 10px 20px;
     float: right;
     display: none;
+    border-radius: 5px;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
+    outline: 0;
+    transition: box-shadow 0.3s, margin-top 0.3s, padding 0.3s;
+    font-family: 'Open Sans Condensed', sans-serif;
+
+
 }
 .upload-result {
+
     display: none;
     position: fixed;
     top: 0;
