--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -1,6 +1,5 @@
-/*@import url(font-awesome.min.css);*/
-/*@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600");*/
-
+@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500);
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
