--- a/src/main/resources/templates/coolUpload.html
+++ b/src/main/resources/templates/coolUpload.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/assets/css/coolUpload.css" th:href="@{/assets/css/coolUpload.css}" />
-    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css}" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" th:href="@{https://use.fontawesome.com/releases/v5.0.13/css/all.css}" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{css/fontawesome-all.css}" href="/static/css/fontawesome-all.css" >
 
     <title>Title</title>
 </head>
@@ -15,8 +12,7 @@
         <ul>
             <li><a th:href="@{/webpage}"><span class="icon fa-home"></span></a></li>
             <li><a th:href="@{/images}"><span class="icon fa-camera-retro"></span></a></li>
-            <li><a th:href="@{/uploadFile}"><span class="fas fa-upload"></span></a></li>
-            <li><a th:href="@{/login}"><span class="far fa-user"></span></a></li>
+            <li><a th:href="@{/uploadFile}"><span class="icon fa-upload"></span></a></li>
         </ul>
     </nav>
 
