--- a/src/main/resources/static/assets/css/grid.css
+++ b/src/main/resources/static/assets/css/grid.css
@@ -1,5 +1,5 @@
-/*@import url(font-awesome.min.css);*/
-/*@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600");*/
+@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500);
 
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -290,27 +290,6 @@ hr.major {
     text-align: right;
 }
 
-/* Box */
-
-.box {
-    border-radius: 4px;
-    border: solid 1px rgba(144, 144, 144, 0.25);
-    margin-bottom: 2em;
-    padding: 1.5em;
-}
-
-.box > :last-child,
-.box > :last-child > :last-child,
-.box > :last-child > :last-child > :last-child {
-    margin-bottom: 0;
-}
-
-.box.alt {
-    border: 0;
-    border-radius: 0;
-    padding: 0;
-}
-
 /* Button */
 
 input[type="submit"],
@@ -457,282 +436,6 @@ button:disabled,
 
 }
 
-/* Contact */
-
-#contact {
-    display: -ms-flexbox;
-    -ms-flex-pack: justify;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -moz-flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -moz-justify-content: space-between;
-    -webkit-justify-content: space-between;
-    -ms-justify-content: space-between;
-    justify-content: space-between;
-    background: #ececec;
-}
-
-#contact form {
-    margin: 0;
-}
-
-#contact .icons {
-    margin-bottom: 1em;
-}
-
-#contact .column {
-    padding: 3.5em 0 1.5em 0;
-    padding-left: 3.5em;
-    padding-right: 3.5em;
-    width: 50%;
-}
-
-#contact .column.social {
-    background: #e6e6e6;
-}
-
-@media screen and (max-width: 980px) {
-
-    #contact .column {
-        padding: 2em 0 0.1em 0;
-        padding-left: 2em;
-        padding-right: 2em;
-    }
-
-}
-
-@media screen and (max-width: 736px) {
-
-    #contact .column {
-        width: 100%;
-    }
-
-}
-
-@media screen and (max-width: 480px) {
-
-    #contact .column {
-        padding: 1em 0 0.1em 0;
-        padding-left: 1em;
-        padding-right: 1em;
-    }
-
-}
-
-/* Form */
-
-form {
-    margin: 0 0 2em 0;
-}
-
-form .field {
-    margin-bottom: 1.5em;
-}
-
-form .field.half {
-    display: inline-block;
-    width: 48%;
-}
-
-form .field.half.first {
-    margin-right: 2.5%;
-}
-
-@media screen and (max-width: 980px) {
-
-    form .field.half {
-        display: block;
-        width: 100%;
-    }
-
-    form .field.half.first {
-        margin-right: 0;
-    }
-
-}
-
-label {
-    display: block;
-    font-size: 0.9em;
-    font-weight: 700;
-    margin: 0 0 1em 0;
-}
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-select,
-textarea {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    border-radius: 4px;
-    border: solid 1px rgba(25, 181, 254, 0.25);
-    color: inherit;
-    display: block;
-    outline: 0;
-    padding: 0 1em;
-    text-decoration: none;
-    width: 100%;
-}
-
-input[type="text"]:invalid,
-input[type="password"]:invalid,
-input[type="email"]:invalid,
-select:invalid,
-textarea:invalid {
-    box-shadow: none;
-}
-
-input[type="text"]:active, input[type="text"]:focus,
-input[type="password"]:active,
-input[type="password"]:focus,
-input[type="email"]:active,
-input[type="email"]:focus,
-select:active,
-select:focus,
-textarea:active,
-textarea:focus {
-    border: solid 1px #19B5FE;
-}
-
-.select-wrapper {
-    text-decoration: none;
-    display: block;
-    position: relative;
-}
-
-.select-wrapper:before {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-transform: none !important;
-}
-
-.select-wrapper:before {
-    content: '\f078';
-    display: block;
-    height: 2.75em;
-    line-height: 2.75em;
-    pointer-events: none;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    top: 0;
-    width: 2.75em;
-}
-
-.select-wrapper select::-ms-expand {
-    display: none;
-}
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-select {
-    height: 2.75em;
-}
-
-textarea {
-    padding: 0.75em 1em;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    display: block;
-    float: left;
-    margin-right: -2em;
-    opacity: 0;
-    width: 1em;
-    z-index: -1;
-}
-
-input[type="checkbox"] + label,
-input[type="radio"] + label {
-    text-decoration: none;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 1em;
-    font-weight: 300;
-    padding-left: 2.4em;
-    padding-right: 0.75em;
-    position: relative;
-}
-
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-transform: none !important;
-}
-
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
-    border-radius: 4px;
-    border: solid 1px;
-    content: '';
-    display: inline-block;
-    height: 1.65em;
-    left: 0;
-    line-height: 1.58125em;
-    position: absolute;
-    text-align: center;
-    top: 0;
-    width: 1.65em;
-}
-
-input[type="checkbox"]:checked + label:before,
-input[type="radio"]:checked + label:before {
-    content: '\f00c';
-}
-
-input[type="checkbox"] + label:before {
-    border-radius: 4px;
-}
-
-input[type="radio"] + label:before {
-    border-radius: 100%;
-}
-
-::-webkit-input-placeholder {
-    opacity: 1.0;
-    color: rgba(34, 49, 63, 0.25);
-}
-
-:-moz-placeholder {
-    opacity: 1.0;
-    color: rgba(34, 49, 63, 0.25);
-}
-
-::-moz-placeholder {
-    opacity: 1.0;
-    color: rgba(34, 49, 63, 0.25);
-}
-
-:-ms-input-placeholder {
-    opacity: 1.0;
-    color: rgba(34, 49, 63, 0.25);
-}
-
-.formerize-placeholder {
-    opacity: 1.0;
-    color: rgba(34, 49, 63, 0.25);
-}
 
 /* Gallery */
 
@@ -932,298 +635,6 @@ input[type="radio"] + label:before {
     display: none;
 }
 
-/* Image */
-
-.image {
-    border: 0;
-    display: inline-block;
-    position: relative;
-}
-
-.image img {
-    display: block;
-}
-
-.image.left, .image.right {
-    max-width: 40%;
-}
-
-.image.left img, .image.right img {
-    width: 100%;
-}
-
-@media screen and (max-width: 480px) {
-
-    .image.left, .image.right {
-        max-width: 100%;
-        width: 100%;
-    }
-
-}
-
-.image.left {
-    float: left;
-    margin: 0 1.5em 1em 0;
-    top: 0.25em;
-}
-
-@media screen and (max-width: 480px) {
-
-    .image.left {
-        float: none;
-        margin: 0 0 1em 0;
-    }
-
-}
-
-.image.right {
-    float: right;
-    margin: 0 0 1em 1.5em;
-    top: 0.25em;
-}
-
-@media screen and (max-width: 480px) {
-
-    .image.right {
-        float: none;
-        margin: 0 0 1em 0;
-    }
-
-}
-
-.image.fit {
-    display: block;
-    margin: 0 0 2em 0;
-    width: 100%;
-}
-
-.image.fit img {
-    width: 100%;
-}
-
-.image.special {
-    border: solid 1px rgba(144, 144, 144, 0.25);
-    padding: 1em;
-}
-
-.image.main {
-    display: block;
-    margin: 0 0 3em 0;
-    width: 50%;
-}
-
-.image.main img {
-    width: 50%;
-}
-
-/* List */
-
-ol {
-    list-style: decimal;
-    margin: 0 0 2em 0;
-    padding-left: 1.25em;
-}
-
-ol li {
-    padding-left: 0.25em;
-}
-
-ul {
-    list-style: disc;
-    margin: 0 0 2em 0;
-    padding-left: 1em;
-}
-
-ul li {
-    padding-left: 0.5em;
-}
-
-ul.alt {
-    list-style: none;
-    padding-left: 0;
-}
-
-ul.alt li {
-    border-top: solid 1px;
-    padding: 0.5em 0;
-}
-
-ul.alt li:first-child {
-    border-top: 0;
-    padding-top: 0;
-}
-
-ul.tabs {
-    list-style: none;
-    padding-left: 0;
-}
-
-ul.tabs li {
-    display: inline-block;
-}
-
-ul.tabs li:first-child {
-    padding: 0;
-}
-
-@media screen and (max-width: 736px) {
-
-    ul.tabs li {
-        display: block;
-        margin: 0 0 .25em 0;
-        padding: 0;
-    }
-
-    ul.tabs li .button {
-        width: 100%;
-    }
-
-}
-
-@media screen and (max-width: 480px) {
-
-    ul.tabs {
-        margin-bottom: 1em;
-    }
-
-}
-
-ul.icons {
-    cursor: default;
-    list-style: none;
-    padding-left: 0;
-}
-
-ul.icons li {
-    display: inline-block;
-    padding: 0 1em 0 0;
-}
-
-ul.icons li:last-child {
-    padding-right: 0;
-}
-
-ul.icons li .icon:before {
-    font-size: 2em;
-}
-
-ul.actions {
-    cursor: default;
-    list-style: none;
-    padding-left: 0;
-}
-
-ul.actions li {
-    display: inline-block;
-    padding: 0 1em 0 0;
-    vertical-align: middle;
-}
-
-ul.actions li:last-child {
-    padding-right: 0;
-}
-
-ul.actions.small li {
-    padding: 0 0.5em 0 0;
-}
-
-ul.actions.vertical li {
-    display: block;
-    padding: 1em 0 0 0;
-}
-
-ul.actions.vertical li:first-child {
-    padding-top: 0;
-}
-
-ul.actions.vertical li > * {
-    margin-bottom: 0;
-}
-
-ul.actions.vertical.small li {
-    padding: 0.5em 0 0 0;
-}
-
-ul.actions.vertical.small li:first-child {
-    padding-top: 0;
-}
-
-ul.actions.fit {
-    display: table;
-    margin-left: -1em;
-    padding: 0;
-    table-layout: fixed;
-    width: calc(100% + 1em);
-}
-
-ul.actions.fit li {
-    display: table-cell;
-    padding: 0 0 0 1em;
-}
-
-ul.actions.fit li > * {
-    margin-bottom: 0;
-}
-
-ul.actions.fit.small {
-    margin-left: -0.5em;
-    width: calc(100% + 0.5em);
-}
-
-ul.actions.fit.small li {
-    padding: 0 0 0 0.5em;
-}
-
-@media screen and (max-width: 480px) {
-
-    ul.actions {
-        margin: 0 0 2em 0;
-    }
-
-    ul.actions li {
-        padding: 1em 0 0 0;
-        display: block;
-        text-align: center;
-        width: 100%;
-    }
-
-    ul.actions li:first-child {
-        padding-top: 0;
-    }
-
-    ul.actions li > * {
-        width: 100%;
-        margin: 0 !important;
-    }
-
-    ul.actions li > *.icon:before {
-        margin-left: -2em;
-    }
-
-    ul.actions.small li {
-        padding: 0.5em 0 0 0;
-    }
-
-    ul.actions.small li:first-child {
-        padding-top: 0;
-    }
-
-}
-
-dl {
-    margin: 0 0 2em 0;
-}
-
-dl dt {
-    display: block;
-    font-weight: 700;
-    margin: 0 0 1em 0;
-}
-
-dl dd {
-    margin-left: 2em;
-}
-
 /* Section/Article */
 
 section.special, article.special {
@@ -1256,21 +667,6 @@ section .inner, article .inner {
 
 }
 
-section .columns, article .columns {
-    display: -ms-flexbox;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -moz-flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -moz-justify-content: space-between;
-    -webkit-justify-content: space-between;
-    -ms-justify-content: space-between;
-    justify-content: space-between;
-}
 
 section .columns.double .column, article .columns.double .column {
     width: 48%;
@@ -1306,70 +702,6 @@ header h6 + p {
     margin-top: -0.6em;
 }
 
-/* Table */
-
-.table-wrapper {
-    -webkit-overflow-scrolling: touch;
-    overflow-x: auto;
-}
-
-table {
-    margin: 0 0 2em 0;
-    width: 100%;
-}
-
-table tbody tr {
-    border: solid 1px;
-    border-left: 0;
-    border-right: 0;
-}
-
-table td {
-    padding: 0.75em 0.75em;
-}
-
-table th {
-    font-size: 0.9em;
-    font-weight: 700;
-    padding: 0 0.75em 0.75em 0.75em;
-    text-align: left;
-}
-
-table thead {
-    border-bottom: solid 2px;
-}
-
-table tfoot {
-    border-top: solid 2px;
-}
-
-table.alt {
-    border-collapse: separate;
-}
-
-table.alt tbody tr td {
-    border: solid 1px;
-    border-left-width: 0;
-    border-top-width: 0;
-}
-
-table.alt tbody tr td:first-child {
-    border-left-width: 1px;
-}
-
-table.alt tbody tr:first-child td {
-    border-top-width: 1px;
-}
-
-table.alt thead {
-    border-bottom: 0;
-}
-
-table.alt tfoot {
-    border-top: 0;
-}
-
-/* Wrapper */
 
 .page-wrap {
     display: -ms-flexbox;
@@ -1396,21 +728,21 @@ table.alt tfoot {
     width: 60em;
 }
 
-@media screen and (max-width: 1280px) {
+    @media screen and (max-width: 1280px) {
 
-    .wrapper > .inner {
-        width: 65em;
+        .wrapper > .inner {
+            width: 65em;
+        }
+
     }
 
-}
+    @media screen and (max-width: 980px) {
 
-@media screen and (max-width: 980px) {
+        .wrapper > .inner {
+            width: 100%;
+        }
 
-    .wrapper > .inner {
-        width: 100%;
     }
-
-}
 
 /* Header */
 
@@ -1546,11 +878,6 @@ body.is-loading #banner > .inner {
     color: #FFF;
 }
 
-#banner p {
-    font-size: 1.5em;
-    margin-bottom: 1.75em;
-}
-
 #banner a {
     color: #FFF;
     text-decoration: none;
@@ -1574,10 +901,6 @@ body.is-loading #banner > .inner {
         font-size: 2.25em;
     }
 
-    #banner p {
-        font-size: 1.25em;
-    }
-
 }
 
 /* Main */
@@ -1587,52 +910,4 @@ body.is-loading #banner > .inner {
     width: 100%;
 }
 
-#main #header {
-    background: #e6e6e6;
-    padding: 1.15em 3.5em;
-    text-align: right;
-}
 
-#main #header h1 {
-    margin: 0;
-    font-size: 1em;
-}
-
-@media screen and (max-width: 980px) {
-
-    #main #header {
-        padding: 1.15em 2em;
-    }
-
-}
-
-@media screen and (max-width: 736px) {
-
-    #main #header {
-        text-align: center;
-    }
-
-}
-
-/* Footer */
-
-#footer {
-    padding: 4em 0 2em 0;
-    background: #f2f2f2;
-}
-
-#footer .copyright {
-    color: #bfbfbf;
-    font-size: 0.9em;
-    margin: 0 0 2em 0;
-    padding: 0 1em;
-    text-align: center;
-}
-
-@media screen and (max-width: 736px) {
-
-    #footer {
-        padding: 3em 0 1em 0;
-    }
-
-}
