--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -67,9 +67,9 @@ body {
 
 /* Basic */
 
-@-ms-viewport {
-	width: device-width;
-}
+/*@-ms-viewport {*/
+	/*width: device-width;*/
+/*}*/
 
 body {
 	-ms-overflow-style: scrollbar;
@@ -839,7 +839,7 @@ input[type="radio"] + label:before {
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 	-moz-justify-content: -moz-flex-start;
-	-webkit-justify-content: -webkit-flex-start;
+	/*-webkit-justify-content: -webkit-flex-start;*/
 	-ms-justify-content: -ms-flex-start;
 	justify-content: flex-start;
 }
@@ -913,90 +913,6 @@ input[type="radio"] + label:before {
 
 .icon > .label {
 	display: none;
-}
-
-/* Image */
-
-.image {
-	border: 0;
-	display: inline-block;
-	position: relative;
-}
-
-.image img {
-	display: block;
-}
-
-.image.left, .image.right {
-	max-width: 40%;
-}
-
-.image.left img, .image.right img {
-	width: 100%;
-}
-
-@media screen and (max-width: 480px) {
-
-	.image.left, .image.right {
-		max-width: 100%;
-		width: 100%;
-	}
-
-}
-
-.image.left {
-	float: left;
-	margin: 0 1.5em 1em 0;
-	top: 0.25em;
-}
-
-@media screen and (max-width: 480px) {
-
-	.image.left {
-		float: none;
-		margin: 0 0 1em 0;
-	}
-
-}
-
-.image.right {
-	float: right;
-	margin: 0 0 1em 1.5em;
-	top: 0.25em;
-}
-
-@media screen and (max-width: 480px) {
-
-	.image.right {
-		float: none;
-		margin: 0 0 1em 0;
-	}
-
-}
-
-.image.fit {
-	display: block;
-	margin: 0 0 2em 0;
-	width: 100%;
-}
-
-.image.fit img {
-	width: 100%;
-}
-
-.image.special {
-	border: solid 1px rgba(144, 144, 144, 0.25);
-	padding: 1em;
-}
-
-.image.main {
-	display: block;
-	margin: 0 0 3em 0;
-	width: 100%;
-}
-
-.image.main img {
-	width: 100%;
 }
 
 /* List */
@@ -1289,69 +1205,6 @@ header h6 + p {
 	margin-top: -0.6em;
 }
 
-/* Table */
-
-.table-wrapper {
-	-webkit-overflow-scrolling: touch;
-	overflow-x: auto;
-}
-
-table {
-	margin: 0 0 2em 0;
-	width: 100%;
-}
-
-table tbody tr {
-	border: solid 1px;
-	border-left: 0;
-	border-right: 0;
-}
-
-table td {
-	padding: 0.75em 0.75em;
-}
-
-table th {
-	font-size: 0.9em;
-	font-weight: 700;
-	padding: 0 0.75em 0.75em 0.75em;
-	text-align: left;
-}
-
-table thead {
-	border-bottom: solid 2px;
-}
-
-table tfoot {
-	border-top: solid 2px;
-}
-
-table.alt {
-	border-collapse: separate;
-}
-
-table.alt tbody tr td {
-	border: solid 1px;
-	border-left-width: 0;
-	border-top-width: 0;
-}
-
-table.alt tbody tr td:first-child {
-	border-left-width: 1px;
-}
-
-table.alt tbody tr:first-child td {
-	border-top-width: 1px;
-}
-
-table.alt thead {
-	border-bottom: 0;
-}
-
-table.alt tfoot {
-	border-top: 0;
-}
-
 /* Wrapper */
 
 .page-wrap {
@@ -1365,7 +1218,7 @@ table.alt tfoot {
 	-ms-flex-wrap: nowrap;
 	flex-wrap: nowrap;
 	-moz-justify-content: -moz-flex-start;
-	-webkit-justify-content: -webkit-flex-start;
+	/*-webkit-justify-content: -webkit-flex-start;*/
 	-ms-justify-content: -ms-flex-start;
 	justify-content: flex-start;
 }
@@ -1458,6 +1311,13 @@ body.is-loading #banner > .inner {
 	transform: translateY(1em);
 }
 
+body.is-loading #banner-grid > .inner-grid {
+	opacity: 0;
+	-moz-transform: translateY(1em);
+	-webkit-transform: translateY(1em);
+	-ms-transform: translateY(1em);
+	transform: translateY(1em);
+}
 #banner {
 	display: -ms-flexbox;
 	-ms-flex-pack: center;
@@ -1478,7 +1338,6 @@ body.is-loading #banner > .inner {
 	min-height: 75vh;
 	height: 75vh;
 	position: relative;
-	/*background-image: url(../templates/images/banner.jpg);*/
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
