--- a/src/main/resources/templates/webPage.html
+++ b/src/main/resources/templates/webPage.html
@@ -95,12 +95,18 @@
                 <!--&lt;!&ndash;&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>.&ndash;&gt;-->
             <!--</div>-->
         <!--</footer>-->
-    <!--</section>-->
+
+    </section>
 
 </div>
 
 
 <!-- Scripts -->
+<script th:src="@{assets/js/jquery.min.js}"></script>
+<script th:src="@{assets/js/jquery.poptrox.min.js}"></script>
+<script th:src="@{assets/js/jquery.scrolly.min.js}"></script>
+<script th:src="@{assets/js/skel.min.js}"></script>
+<script th:src="@{assets/js/util.js}"></script>
 <script th:src="@{assets/js/main.js}"></script>
 
 </body>
